# net-bot

./: .gitignore  README.md  netbot.db  pyproject.toml  test_networking.py
app/: .gitignore  main.py
app/netbot/api/: api.py
app/netbot/api/endpoints/: chat.py  ping.py
app/netbot/core/: chatbot.py  networking.py
app/netbot/db/: __init__.py  crud.py  models.py
app/netbot/schemas/: __init__.py  chat.py
app/static/: index.html  script.js  styles.css
